# Multi-Kinect2-3D-Scanner

./: 3DScan.cbp  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  camera.cpp  camera.h  cmake_install.cmake  kinect.cpp  kinect.h  main.cpp  pcl.cpp  pcl.h  support.cpp  support.h  test3
src/: camera.cpp  camera.h  globalsettings.cpp  globalsettings.h  kinect.cpp  kinect.h  kinect_data.cpp  kinect_filtration.cpp  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pcl.cpp  pcl.h  realsense.cpp  realsense.h  support.cpp  support.h  support_clouds.cpp  support_threads.cpp  support_viewer.cpp
